fix layout bugs register mobile and tabs improvement

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,11 +1,11 @@
 .new-item {
-  
+
   position: fixed;
   right: 0px;
   bottom: 10px;
   width: 21vw;
   text-align: center;
-  
+
   .create-new {
     background: url(../images/new-item__button__background--sm.svg) no-repeat center center;
     background-size: 42px 42px;
@@ -13,17 +13,17 @@
     height: 45px;
     width: 45px;
     font-size: 2.2rem;
-  } 
+  }
 }
 
 .pre-banner {
   width: 100%;
   max-width: 768px;
-  
+
   background-image: url(../images/header-arch-only.svg);
   background-repeat: no-repeat;
   background-size: 100% 82px;
-  
+
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
@@ -41,17 +41,17 @@
   box-sizing: border-box;
 }
 
-.background--talk{
-    background-image: url(../images/homepage-illustration.jpg);
-    background-repeat: no-repeat;
-    background-size: 768px 400px;
-    background-size: contain;
-    background-position: center top;
-    min-height: calc(20vh + 82px);
-    background-color: #FFF;
-   padding-top: 120px;
+.background--talk {
+  background-image: url(../images/homepage-illustration.jpg);
+  background-repeat: no-repeat;
+  background-size: 768px 400px;
+  background-size: contain;
+  background-position: center top;
+  min-height: calc(20vh + 82px);
+  background-color: #FFF;
+  padding: 120px 15px 0 15px;
   text-align: center;
-  }
+}
 
 .logo {
     width: 100%;
@@ -62,7 +62,7 @@
 
 @media (min-width: 768px) {
   .general-header {
-    position: fixed; 
+    position: fixed;
     z-index: 5;
     right: auto;
     bottom: auto;
@@ -75,9 +75,9 @@
     padding: 90px 15px 130px;
     overflow: auto;
   }
-  
+
   .new-item {
-  
+
     position: relative;
     right: auto;
     bottom: auto;
@@ -104,7 +104,7 @@
       svg {
         margin-right: 1.5rem;
       }
-      
+
       &:hover {
         box-shadow: none;
         background: rgba($cyan, 1);
@@ -116,13 +116,13 @@
         background: rgba($white, 0.1);
         border-bottom: none;
       }
-    } 
+    }
   }
 }
 
 @media (min-width: 992px) {
   .general-header {
-    position: fixed; 
+    position: fixed;
     right: auto;
     bottom: auto;
     left: auto;
@@ -133,5 +133,5 @@
     float: left;
     height: 100vh;
     padding: 90px 15px 15px;
-  } 
+  }
 }
